src/objects/Supplementary_Access_User__c.object
<CustomObject>
    <description>A record for consolidating various controlled document sharing permissions from a verity of custom and apex sources,</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Step (If Applicable)</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>Supplementary Access History</relationshipLabel>
        <relationshipName>Supplementary_Access_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlled_Document__c</fullName>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipLabel>Supplementary Access History</relationshipLabel>
        <relationshipName>CD_Add_on_Sharing_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactivated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CD_Add_on_Sharing_Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactivation_Date__c</fullName>
        <label>Inactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CD_Add_on_Sharing_Users2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CD_Add_on_Sharing_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplementary Access User</label>
    <nameField>
        <displayFormat>SAU-{0000000000}</displayFormat>
        <label>Supplementary Access User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplementary Access History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>